--- a/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletPasswordViewController.xib
@@ -23,7 +23,9 @@
                 <outlet property="confirmPassField" destination="AQz-dp-S4r" id="iAn-8z-wqL"/>
                 <outlet property="passField" destination="7et-9b-4aA" id="rle-Mr-S5n"/>
                 <outlet property="passProgressView" destination="kAR-Ig-iOb" id="zM1-fw-1hJ"/>
+                <outlet property="saveButton" destination="seK-ui-jrF" id="N1x-Ou-sNo"/>
                 <outlet property="scrollView" destination="iJh-QQ-Obr" id="ClT-DD-4Uq"/>
+                <outlet property="subTitleLabel" destination="OLc-86-sdM" id="rAt-sz-2J0"/>
                 <outlet property="topOffset" destination="DVt-CR-azk" id="Fbp-a2-aur"/>
                 <outlet property="view" destination="EWz-n4-e9f" id="s4o-Wd-xQ8"/>
             </connections>
@@ -40,7 +42,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="597"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create new password to access your wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLc-86-sdM">
-                                    <rect key="frame" x="15" y="0.0" width="345" height="19"/>
+                                    <rect key="frame" x="15" y="0.0" width="345" height="19.5"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -50,10 +52,10 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vKG-Rj-luv">
-                                    <rect key="frame" x="15" y="69" width="345" height="295.5"/>
+                                    <rect key="frame" x="15" y="69.5" width="345" height="300"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7et-9b-4aA" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
-                                            <rect key="frame" x="15" y="5" width="315" height="21"/>
+                                            <rect key="frame" x="15" y="5" width="315" height="22"/>
                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="18"/>
@@ -76,14 +78,14 @@
                                             </connections>
                                         </textField>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAR-Ig-iOb" customClass="BMStepView" customModule="BeamWallet" customModuleProvider="target">
-                                            <rect key="frame" x="15" y="41" width="315" height="6"/>
+                                            <rect key="frame" x="15" y="42" width="315" height="6"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="6" id="pv2-wd-D1W"/>
                                             </constraints>
                                         </view>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AQz-dp-S4r" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
-                                            <rect key="frame" x="15" y="197" width="315" height="21"/>
+                                            <rect key="frame" x="15" y="200.5" width="315" height="22"/>
                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="18"/>
@@ -103,7 +105,7 @@
                                             </connections>
                                         </textField>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hez-Qz-z6Q">
-                                            <rect key="frame" x="15" y="62" width="315" height="105"/>
+                                            <rect key="frame" x="15" y="63" width="315" height="107.5"/>
                                             <string key="text">Strong password needs to meet the following requirements:
 •  the length must be at least 10 characters
 •  must contain at least one lowercase letter
